[metadata]
name = atstreaming
version = 0.2.1
description = Small script to automate background streaming of files or folder with ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MemeLabs/streaming/tree/master/cmdline-streamer
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
py_modules = atstreaming

[options.entry_points]
console_scripts =
    atstreaming = streaming:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
